--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,9 @@ authors = ["Joaquin Rosales <globojorro@gmail.com>"]
 
 [dependencies]
 framebuffer = "0.1"
-font8x8 = "0.1"
+font8x8 = { version = "0.1", optional = true }
 glob = "0.2"
+
+[features]
+default = ["fonts"]
+fonts = ["font8x8"]
