--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,11 @@ name = "sensehat-screen"
 description = "A Rust library for using the 8x8-LED RGB565 screen on the Raspberry SenseHat device."
 version = "0.1.0"
 authors = ["Joaquin Rosales <globojorro@gmail.com>"]
+keywords = ["sensehat", "screen", "8x8", "raspberry pi", "framebuffer"]
+categories = ["embedded", "rendering", "visualization", "encoding"]
+homepage = "https://github.com/saibatizoku/sensehat-screen-rs"
+repository = "https://github.com/saibatizoku/sensehat-screen-rs"
+readme = "README.md"
 license = "MIT"
 
 [dependencies]
