--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "sensehat-screen"
 description = "A Rust library for using the 8x8-LED RGB565 screen on the Raspberry SenseHat device."
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Joaquin Rosales <globojorro@gmail.com>"]
 keywords = ["sensehat", "screen", "8x8", "raspberry-pi", "framebuffer"]
 categories = ["embedded", "rendering", "visualization", "encoding"]
@@ -14,7 +14,13 @@ license = "MIT"
 framebuffer = "0.1"
 font8x8 = { version = "0.1", optional = true }
 glob = "0.2"
+serde = { version = "1.0", optional = true }
+serde_derive = { version = "1.0", optional = true }
 
 [features]
-default = ["fonts"]
+default = ["fonts", "serde-support"]
 fonts = ["font8x8"]
+serde-support = ["serde", "serde_derive"]
+
+[profile.release]
+#lto = true
