--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,14 +11,15 @@ readme = "README.md"
 license = "MIT"
 
 [dependencies]
-framebuffer = "0.1"
+framebuffer = { version = "0.1", optional = true }
 font8x8 = { version = "0.1", optional = true }
 glob = "0.2"
 serde = { version = "1.0", optional = true }
 serde_derive = { version = "1.0", optional = true }
 
 [features]
-default = ["fonts", "serde-support"]
+default = ["linux-framebuffer", "fonts", "serde-support"]
+linux-framebuffer = ["framebuffer"]
 fonts = ["font8x8"]
 serde-support = ["serde", "serde_derive"]
 
