--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "sensehat-screen"
-description = "A Rust library for using the 8x8-LED RGB565 screen on the Raspberry SenseHat device."
-version = "0.1.4"
+description = "A library for using the 8x8-LED matrix, with RGB565 coloring, on the Raspberry Pi Sense HAT device."
+version = "0.1.5"
 authors = ["Joaquin Rosales <globojorro@gmail.com>"]
 keywords = ["sensehat", "screen", "8x8", "raspberry-pi", "framebuffer"]
 categories = ["embedded", "rendering", "visualization", "encoding"]
@@ -25,6 +25,3 @@ rgb565 = []
 linux-framebuffer = ["framebuffer"]
 fonts = ["font8x8"]
 serde-support = ["serde", "serde_derive"]
-
-[profile.release]
-#lto = true
