--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,9 +17,10 @@ serde = { version = "1.0", optional = true }
 serde_derive = { version = "1.0", optional = true }
 
 [features]
-default = ["linux-framebuffer", "fonts", "rotate", "serde-support"]
+default = ["linux-framebuffer", "fonts", "rotate", "scroll", "serde-support"]
 big-endian = []
 rotate = []
+scroll = []
 linux-framebuffer = ["framebuffer"]
 fonts = ["font8x8"]
 serde-support = ["serde", "serde_derive"]
