--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,10 +17,10 @@ serde = { version = "1.0", optional = true }
 serde_derive = { version = "1.0", optional = true }
 
 [features]
-default = ["linux-framebuffer", "fonts", "scroll", "serde-support", "translate"]
+default = ["linux-framebuffer", "fonts", "rotate", "serde-support", "offset"]
 big-endian = []
 rotate = []
-translate = []
+offset = []
 linux-framebuffer = ["framebuffer"]
 fonts = ["font8x8"]
 serde-support = ["serde", "serde_derive"]
