--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,10 +17,11 @@ serde = { version = "1.0", optional = true }
 serde_derive = { version = "1.0", optional = true }
 
 [features]
-default = ["linux-framebuffer", "fonts", "rotate", "serde-support", "offset"]
+default = ["clip", "linux-framebuffer", "fonts", "rotate", "serde-support", "offset"]
 big-endian = []
 rotate = []
 offset = []
+clip = []
 linux-framebuffer = ["framebuffer"]
 fonts = ["font8x8"]
 serde-support = ["serde", "serde_derive"]
