--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ serde_derive = { version = "1.0", optional = true }
 default = ["clip", "linux-framebuffer", "fonts", "rotate", "serde-support", "offset"]
 big-endian = []
 rotate = []
-offset = []
+offset = ["clip"]
 clip = []
 linux-framebuffer = ["framebuffer"]
 fonts = ["font8x8"]
