--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ homepage = "https://github.com/saibatizoku/sensehat-screen-rs"
 repository = "https://github.com/saibatizoku/sensehat-screen-rs"
 readme = "README.md"
 license = "MIT"
+build = "build.rs"
 
 [dependencies]
 framebuffer = { version = "0.1", optional = true }
@@ -25,3 +26,6 @@ clip = []
 linux-framebuffer = ["framebuffer"]
 fonts = ["font8x8"]
 serde-support = ["serde", "serde_derive"]
+
+[build-dependencies]
+rustc_version = "0.2"
