--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ build = "build.rs"
 [dependencies]
 framebuffer = { version = "0.1", optional = true }
 font8x8 = { version = "0.1.5", optional = true }
+lazy_static = "1.0"
 serde = { version = "1.0", optional = true }
 serde_derive = { version = "1.0", optional = true }
 
