--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "sensehat-screen"
 description = "A library for using the 8x8-LED matrix, with RGB565 coloring, on the Raspberry Pi Sense HAT device."
-version = "0.2.2"
+version = "0.2.3"
 authors = ["Joaquin Rosales <globojorro@gmail.com>"]
 keywords = ["sensehat", "screen", "8x8", "raspberry-pi", "framebuffer"]
-categories = ["embedded", "rendering", "visualization", "encoding"]
+categories = ["embedded", "gui", "hardware-support", "rendering::graphics-api"]
 homepage = "https://github.com/saibatizoku/sensehat-screen-rs"
 repository = "https://github.com/saibatizoku/sensehat-screen-rs"
 readme = "README.md"
@@ -13,7 +13,7 @@ build = "build.rs"
 
 [dependencies]
 framebuffer = { version = "0.1", optional = true }
-font8x8 = { version = "0.2.3", optional = true }
+font8x8 = { version = "0.2.5", optional = true }
 lazy_static = "1.0"
 serde = { version = "1.0", optional = true }
 serde_derive = { version = "1.0", optional = true }
