--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "sensehat-screen"
 description = "A library for using the 8x8-LED matrix, with RGB565 coloring, on the Raspberry Pi Sense HAT device."
-version = "0.2.5"
+version = "0.2.6-dev"
 authors = ["Joaquin Rosales <globojorro@gmail.com>"]
 keywords = ["sensehat", "screen", "8x8", "raspberry-pi", "framebuffer"]
 categories = ["embedded", "gui", "hardware-support", "rendering::graphics-api"]
@@ -14,7 +14,7 @@ edition = "2018"
 
 [dependencies]
 framebuffer = { version = "0.2", optional = true }
-font8x8 = { version = "0.2.5", optional = true }
+font8x8 = { version = "0.2.7", optional = true }
 lazy_static = "1.0"
 serde = { version = "1.0", optional = true }
 serde_derive = { version = "1.0", optional = true }
